tests/baselines/reference/duplicatePropertiesInTypeAssertions01.errors.txt
duplicatePropertiesInTypeAssertions01.ts(1,11): error TS2300: Duplicate identifier 'a'.
duplicatePropertiesInTypeAssertions01.ts(1,22): error TS2300: Duplicate identifier 'a'.


==== duplicatePropertiesInTypeAssertions01.ts (2 errors) ====
    let x = <{a: number; a: number}>{};
              ~
!!! error TS2300: Duplicate identifier 'a'.
                         ~
!!! error TS2300: Duplicate identifier 'a'.